<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/have_consent_layout">

            <TextView
                style="@style/AppTheme"
                android:text="@string/header_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@android:drawable/dark_header"
                android:textColor="@android:color/white"
                android:padding="@dimen/abc_text_size_subhead_material" />

            <LinearLayout
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/stop_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="100"
                    android:singleLine="false" />

                <Button
                    style="@style/AppTheme"
                    android:text="@string/stop_and_quit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="stopAndQuit" />
            </LinearLayout>

            <TextView
                style="@style/AppTheme"
                android:text="@string/header_manual_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@android:drawable/dark_header"
                android:textColor="@android:color/white"
                android:padding="@dimen/abc_text_size_subhead_material" />

            <LinearLayout
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/AppTheme"
                    android:text="@string/configuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    style="@style/AppTheme"
                    android:id="@+id/configuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="o,tap o,pi c,172.28.172.1,12313,tcp a,10.123.123.2,30 n,socat0 r,10.123.123.2,30" />

                <Button
                    style="@style/AppTheme"
                    android:onClick="manualConnect"
                    android:text="@string/connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--android:text="o,pi c,172.28.172.1,12313,tcp a,10.123.123.2,30 n,socat0 r,10.123.123.2,30"-->
            <!--android:text="a,10.123.123.2,30 o,pi n,socat0 l,12312,tcp"-->
            <!--android:text="c,172.28.172.1,12312,tcp a,10.123.123.2,24 r,10.123.123.0,24"-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/no_consent_layout">

            <TextView
                style="@style/AppTheme"
                android:text="@string/header_no_consent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@android:drawable/dark_header"
                android:textColor="@android:color/white"
                android:padding="@dimen/abc_text_size_subhead_material" />

            <LinearLayout
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/no_consent_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="100"
                    android:singleLine="false" />

                <Button
                    style="@style/AppTheme"
                    android:text="@string/try_to_consent"
                    android:onClick="retryConsent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/waiting_consent_layout">

            <TextView
                style="@style/AppTheme"
                android:text="@string/header_waiting_consent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@android:drawable/dark_header"
                android:textColor="@android:color/white"
                android:padding="@dimen/abc_text_size_subhead_material" />

            <LinearLayout
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/waiting_consent_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="100"
                    android:singleLine="false" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>